fix: overflow css issue

--- a/assets/sass/components/_blog-card.scss
+++ b/assets/sass/components/_blog-card.scss
@@ -71,7 +71,7 @@
     color: #707070;
     margin-bottom: 16px;
     height: 100px;
-    white-space: wrap;
+    white-space: normal;
     overflow: hidden;
     text-overflow: ellipsis;
   }
