--- a/assets/sass/components/_pricing-card.scss
+++ b/assets/sass/components/_pricing-card.scss
@@ -23,7 +23,7 @@
       text-align: center;
       color: #707070;
       height: 75px;
-      white-space: wrap;
+      white-space: normal;
       overflow: hidden;
       text-overflow: ellipsis;
     }
