--- a/assets/sass/components/_service-card.scss
+++ b/assets/sass/components/_service-card.scss
@@ -43,7 +43,7 @@
       color: #707070;
       padding-bottom: 15px;
       height: 100px;
-      white-space: wrap;
+      white-space: normal;
       overflow: hidden;
       text-overflow: ellipsis;
     }
